<resources>
    <string name="app_name">Disk remedio</string>
    <string name="configuracoes">Configurações</string>
    <string name="ic_search">Notificação</string>
    <string name="search_for_MainActivity">Procurar Remédios</string>
    <string name="categoriaspopulares">Categorias populares</string>
    <string name="vertodas">Ver todas</string>
    <string name="addtocard">Adicionar ao carrinho</string>
    <string name="select_address">Selecione o endereço</string>
    <string name="cart">Carrinho</string>
    <string name="TemDisconto">Terá disconto ?</string>
    <string name="addnewaddress">Novo endereço</string>
    <string name="valor_venda_com_desconto">Valor de venda após o desconto</string>
    <string name="quant_parcel_ask">Quantidade de parcelas</string>
    <string name="if_has_parcel">Terá percelamento ?</string>
    <string name="unidademontaria">"R$ "</string>
    <string name="detalhes_produto">Detalhes do produto</string>
    <string name="usosinciados">Usos indicados:</string>
    <string name="usosNinciados">Usos não indicados:</string>
    <string name="adicionarProduto">Adicionar produto</string>
    <string name="FormularioProduto">Formulário do produto</string>
    <string name="addprotudo">Adicionar produto</string>
    <string name="nome_remedio">Nome do produto</string>
    <string name="usosinciadosF">Usos indicados</string>
    <string name="usosNindicadosF">Usos não indicados</string>
    <string name="nome_modelo">Modelo do produto</string>
    <string name="nome_fabricante">Fabricante</string>
    <string name="preco_produto">Preço produto</string>
    <string name="Quant_per_crt">Quantidade por cartela</string>
    <string name="quant_per_cx">Quantidade por caixa</string>
    <string name="adimOptions">Opcções de administrador</string>
    <string name="search_drogs">Procure remedios</string>
    <string name="search_drogs2_txt">Encomende remédios de sua casa</string>
    <string name="start">Iniciar</string>
    <string name="of"> De </string>
    <string name="skip">Pular</string>
    <string name="suasinformações">Suas informações</string>
    <string name="empty_fields">Preencha todos os campos corretamente</string>
    <string name="empty_field">Preencha esse campo corretamente</string>
    <string name="respostaSeguranca">Resposta de segurança</string>
    <string name="nome">Nome</string>
    <string name="informe_seu_numero_telefone">Número de telefone</string>
    <string name="data_nascimento">Data de nascimento</string>
    <string name="endereco">Endereço</string>
    <string name="cep">Cep</string>
    <string name="rg">Rg</string>
    <string name="repeatpassword">Repita a sua senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="usefull_information">informações importantes</string>
    <string name="your_name">Seu nome</string>
    <string name="perguntaSeguranca">Pergunta de segurança</string>
    <string name="contanaoencontrada">Conta não encontrada</string>
    <string name="cpf">Cpf</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="register">Resgistrar-se</string>
    <string name="Level">Formulário do nível</string>
    <string name="nameLevel">Nome do nivel</string>
    <string name="adicionarLevel">Adicionar nivel</string>
    <string name="Formulario_conta">Formulário conta</string>
    <string name="number_houses">Número da residencia</string>
    <string name="andar_apartamento">Andar do apartamento</string>
    <string name="bloco_apartamento">Bloco do condomínio</string>
    <string name="atualizar">Atualizar</string>
    <string name="into">Entrar</string>
    <string name="offer">Desconto</string>
    <string name="money_sing">R$ </string>
    <string name="in_untill">Em até </string>

</resources>