<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaria">

    <ImageView
        android:id="@+id/img_search_drogs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/remedios"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:textColor="@color/white"
        android:id="@+id/qunat_of_quant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="1 de 4"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_txt_onboarding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_drogs"
        android:textColor="@color/white"
        android:textSize="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_search_drogs" />

    <TextView
        android:id="@+id/descricao_txt_onboarding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_drogs2_txt"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_txt_onboarding" />
<Button
    android:id="@+id/bnt_search_iniciar"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:backgroundTint="@color/white"
    android:textColor="@color/primaria"
    android:text="@string/start"
    android:layout_marginBottom="30dp"
    android:layout_width="match_parent"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>