<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Relativelayouat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaria"
        android:orientation="horizontal"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/into"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
        <ImageView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/imgvoltar_sua_contaa_Main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_arrow50" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:theme="@style/Theme.diskremedio"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                app:boxStrokeColor="@color/primaria"
                app:hintTextColor="@color/primaria"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/cpf">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cpf_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="543441518/36"
                    android:inputType="number"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/senha"
                app:boxStrokeColor="@color/primaria"
                app:hintTextColor="@color/primaria">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_login"
                    android:layout_width="match_parent"
                    android:text="1234"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:textAllCaps="false"
                android:id="@+id/entrar_acount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:backgroundTint="@color/primaria"
                android:text="@string/entrar"
                app:layout_constraintTop_toBottomOf="@+id/password" />

            <Button
                android:textAllCaps="false"
                android:id="@+id/register_acount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/primaria"
                android:text="@string/register"
                app:layout_constraintTop_toBottomOf="@+id/password" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>