<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".contapessoa">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/top_back_protudo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaria"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgvoltar_Adicionar_Pessoa_Main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_arrow50" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suasinformações"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>


    <ImageView
        android:id="@+id/img_medicine_f"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nome_produtoF"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:hint="@string/nome_remedio"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/primaria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_medicine_f">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nome_produtof"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:inputType="textCapSentences"
            android:singleLine="true"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usosindicadosF"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="25dp"
        android:hint="@string/usosinciadosF"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/primaria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nome_produtoF">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usosindicadosf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:inputType="textCapSentences"
            android:singleLine="true"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usosNindicadosf"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="25dp"
        android:hint="@string/usosNindicadosF"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/primaria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usosindicadosF">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usosNindicadosF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:inputType="textCapSentences"
            android:singleLine="true"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_modelof"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="25dp"
        android:hint="@string/nome_modelo"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/primaria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usosNindicadosf">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_modeloF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:inputType="textCapSentences"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fabricante_remediof"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="25dp"
        android:hint="@string/nome_fabricante"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/primaria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_modelof">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fabricante_remedioF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:inputType="textCapSentences"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Quant_per_cxf"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="25dp"
        android:hint="@string/Quant_per_crt"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/primaria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fabricante_remediof">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Quant_per_cxF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:inputType="textCapSentences"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/quant_remedio_totalf"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="25dp"
        android:hint="@string/Quant_per_crt"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/primaria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Quant_per_cxf">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/quant_remedio_totalF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:inputType="textCapSentences"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/preco_remedioF"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="25dp"
        android:hint="@string/preco_produto"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/primaria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quant_remedio_totalf">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/preco_remediof"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:inputType="numberDecimal"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parent_discontF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/preco_remedioF">

        <TextView
            android:id="@+id/TemDisconto_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="25dp"

            android:layout_marginEnd="25dp"
            android:padding="6dp"
            android:text="@string/TemDisconto"
            android:textColor="@color/black"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.example.diskremedio.Pattern.SwitchPlus
            android:id="@+id/if_Has_Discountf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout

        android:id="@+id/LLhaveDiscount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/parent_parcelF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/parent_discontF">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:hint="@string/valor_venda_com_desconto"
            android:paddingBottom="1dp"
            app:boxStrokeColor="@color/secundaria"
            app:hintTextColor="@color/secundaria">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/valor_venda_com_desconto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:inputType="numberDecimal"
                android:singleLine="true"

                app:hintTextColor="@color/secundaria" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parent_parcelF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LLhaveDiscount">

        <TextView
            android:id="@+id/if_have_parcels_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:padding="6dp"
            android:text="@string/if_has_parcel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.example.diskremedio.Pattern.SwitchPlus
            android:id="@+id/if_have_parcelsf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/LL_Have_Parcel_Ask"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parent_parcelF">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/numberParcelsF"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quant_parcel_ask"
            app:boxStrokeColor="@color/secundaria"

            app:hintTextColor="@color/secundaria">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/numberParcelsf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:inputType="number"
                android:singleLine="true"
                app:hintTextColor="@color/secundaria" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/salvarProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/primaria"
        android:text="@string/addprotudo"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_gravity="center"
/>
</LinearLayout>
</ScrollView>



