<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="10dp"
    android:theme="@style/Theme.MaterialComponents">

    <TextView
        android:id="@+id/textTop_new_item_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/primaria"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/Level"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/pergunta_seguranca_new_item_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:textColor="@color/primaria"
                android:textSize="25dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/Name_level_criationL"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Name_level_criationL"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="130dp"
                android:layout_marginEnd="25dp"
                android:gravity="start"
                android:hint="@string/nameLevel"
                android:textColorHint="@color/primaria"
                android:theme="@style/mythemetextinputlayout"
                app:boxStrokeColor="@color/primaria"
                app:errorEnabled="true"
                app:hintTextColor="@color/primaria"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Name_level_criation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:singleLine="true"
                    android:textColor="@android:color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/addLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/primaria"
                android:text="@string/adicionarLevel"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/Name_level_criationL" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>